--- a/plugin.xml
+++ b/plugin.xml
@@ -25,11 +25,11 @@
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="Clock">
-        <param name="android-package" value="org.apache.cordova.clock.Clock"/>
+        <param name="android-package" value="com.totalpave.cordova.clock.Clock"/>
         <param name="onload" value="true"/>
       </feature>
     </config-file>
 
-    <source-file src="src/android/SplashScreen.java" target-dir="src/org/apache/cordova/splashscreen" />
+    <source-file src="src/android/SplashScreen.java" target-dir="src/com/totalpave/cordova/splashscreen" />
   </platform>
 </plugin>
