Updated author names to TotalPave's legal name, Total Pave Inc.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": {
-    "name": "TotalPave"
+    "name": "Total Pave Inc."
   },
   "bugs": {
     "url": "https://github.com/totalpave/cordova-plugin-clock/issues"
