--- a/package.json
+++ b/package.json
@@ -5,6 +5,16 @@
   "bugs": {
     "url": "https://github.com/totalpave/cordova-plugin-clock/issues"
   },
+  "contributors": [
+    {
+      "name": "Tyler Breau",
+      "email": "tyler.breau@totalpave.com"
+    },
+    {
+      "name": "Norman Breau",
+      "email": "norman.breau@totalpave.com"
+    }
+  ],
   "cordova": {
     "id": "cordova-plugin-clock",
     "platforms": [
