--- a/plugin.xml
+++ b/plugin.xml
@@ -29,7 +29,7 @@
         <param name="onload" value="true"/>
       </feature>
     </config-file>
-    <framework src="relative/path/your.gradle" custom="true" type="gradleReference" />
+    <framework src="src/android/clock-gradle.gradle" custom="true" type="gradleReference" />
     <source-file src="src/android/Clock.java" target-dir="src/com/totalpave/clock" />
   </platform>
 </plugin>
