--- a/plugin.xml
+++ b/plugin.xml
@@ -20,7 +20,14 @@
     </config-file>
     <header-file src="src/ios/CDVClock.h" />
     <source-file src="src/ios/CDVClock.m" />
-    <framework src="TrueTime" type="podspec" spec="5.0.3" />
+    <podspec>
+      <config>
+        <source url="https://github.com/CocoaPods/Specs.git"/>
+      </config>
+      <pods>
+        <pod name="TrueTime" spec="5.0.3"/>
+      </pods>
+    </podspec>
   </platform>
 
   <platform name="android">
