--- a/package.json
+++ b/package.json
@@ -44,5 +44,12 @@
   "version": "0.0.0",
   "directories": {
     "test": "tests"
+  },
+  "dependencies": {
+    "cordova-common": "^3.2.0",
+    "cordova-js": "^5.0.0",
+    "cordova-lib": "^9.0.1",
+    "install": "^0.13.0",
+    "npm": "^6.10.3"
   }
 }
