--- a/plugin.xml
+++ b/plugin.xml
@@ -28,6 +28,7 @@
         <pod name="TrueTime" spec="5.0.3"/>
       </pods>
     </podspec>
+    <hook type="after_plugin_install" src="scripts/after_install.js" />
   </platform>
 
   <platform name="android">
