implemented xcconfig update via hook

--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     "cordova-lib": "^9.0.1",
     "elementtree": "^0.1.7",
     "install": "^0.13.0",
-    "npm": "^6.10.3"
+    "lodash": "^4.17.15",
+    "npm": "^6.10.3",
+    "plist": "^3.0.1",
+    "q": "^1.5.1",
+    "tostr": "^0.1.0",
+    "xcode": "^2.0.0"
   }
 }
