Removed old hooks as they were replaced by new hooks. Setting swift version using new hooks. Added ClockSwiftHack.swift to fix an stupid problem with xcode/ios. Updated package.json and plugin.xml for all these recent changes.

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "cordovaDependencies": {
       "0.0.0": {
         "cordova-android": ">=8.0.0",
-        "cordova-ios": ">=5.0.1",
-        "tp-cordova-ios": ">=5.0.1"
+        "cordova-ios": ">=5.0.1"
       }
     }
   },
