--- a/plugin.xml
+++ b/plugin.xml
@@ -20,6 +20,7 @@
     </config-file>
     <header-file src="src/ios/CDVClock.h" />
     <source-file src="src/ios/CDVClock.m" />
+    <source-file src="src/ios/ClockSwiftHack.swift" />
     <podspec>
       <config>
         <source url="https://github.com/CocoaPods/Specs.git"/>
