Changed package.json cordova id from cordova-plugin-date to totalpave-cordova-plugin-date

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "Norman Breau <norman.breau@totalpave.com>"
   ],
   "cordova": {
-    "id": "cordova-plugin-date",
+    "id": "totalpave-cordova-plugin-date",
     "platforms": [
       "android",
       "ios"
