--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="totalpave-cordova-plugin-date" version="0.0.5-dev">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="totalpave-cordova-plugin-date" version="0.0.5">
   <name>Date</name>
   <description>Cordova plugin to interface with TrueTime's Android and iOS NTP libaries.</description>
   <author>Total Pave Inc.</author>
