--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@totalpave/cordova-plugin-date",
-  "version": "0.0.5",
+  "version": "0.0.6-dev",
   "author": "Total Pave Inc.",
   "bugs": {
     "url": "https://github.com/totalpave/cordova-plugin-date/issues"
