--- a/package.json
+++ b/package.json
@@ -48,15 +48,12 @@
   },
   "dependencies": {
     "cordova-plugin-cocoapod-support": "1.6.2",
-    "cordova-common": "^3.2.0",
-    "cordova-js": "^5.0.0",
-    "cordova-lib": "^9.0.1",
     "elementtree": "^0.1.7",
     "install": "^0.13.0",
-    "lodash": "^4.17.15",
-    "plist": "^3.0.1",
+    "lodash": "4.17.21",
+    "plist": "3.0.4",
     "q": "^1.5.1",
     "tostr": "^0.1.0",
-    "xcode": "^2.0.0"
+    "xcode": "3.0.1"
   }
 }
