Updated TrueTime dependency to use cordova ios 6 system.

--- a/plugin.xml
+++ b/plugin.xml
@@ -12,7 +12,6 @@
   </js-module>
 
   <platform name="ios">
-    <dependency id="cordova-plugin-cocoapod-support" version="1.6.2" />
 
     <config-file target="config.xml" parent="/*">
       <feature name="TPDate">
@@ -24,20 +23,11 @@
     <source-file src="src/ios/CDVTPDate.m" />
     <source-file src="src/ios/DateSwiftHack.swift" />
 
-    <!-- pod tag is a cordova-plugin-cocoapod-support thing -->
-    <pod name="TrueTime" version="5.0.3" />
-    <!--
-    Due to some troubles with podspec/framework tags, trying cordova-plugin-cocoapod-support for cocoapod dependencies.
     <podspec>
-      <config>
-        <source url="https://github.com/CocoaPods/Specs.git"/>
-      </config>
       <pods>
-        <pod name="TrueTime" spec="5.0.3"/>
+        <pod name="TrueTime" git="git@github.com:instacart/TrueTime.swift.git" tag="5.1.0"/>
       </pods>
     </podspec>
-    <framework src="TrueTime" type="podspec" spec="~> 5.0.3" />
-     -->
   </platform>
   
   <platform name="android">
